2025 repository revival: update dependencies